fixed chip alignment

--- a/src/app/route/new-route/new-route.component.css
+++ b/src/app/route/new-route/new-route.component.css
@@ -17,3 +17,10 @@ mat-card {
 mat-card:hover {
     box-shadow: 0 10px 6px -6px black;
 }
+
+
+mat-grid-tile mat-chip-list {
+    position: absolute;
+    left: 5px;
+    top: 5px;
+}
